--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,14 @@
             <ul id="participants-list"></ul>
         </div>
 
+        <!-- Display the chat messages -->
+        <div id="chat">
+            <h3>Chat</h3>
+            <ul id="messages-list"></ul>
+            <input id="message-input" placeholder="Your chat message" value="" />
+            <button id="send-msg-btn" disabled>Send</button>
+        </div>
+
         <!-- Container for the video streams -->
         <div id="video-container"></div>
 
